[gd_scene load_steps=4 format=2]

[ext_resource path="res://Recursos/Temas/default.tres" type="Theme" id=1]
[ext_resource path="res://UiScene/Script/UserContainer.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Iconos/eliminar.png" type="Texture" id=3]

[node name="UserContainer" type="PanelContainer"]
margin_right = 95.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 354.0
margin_bottom = 346.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 342.0
margin_bottom = 334.0
alignment = 1

[node name="botonBorrar" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 212.0
margin_right = 332.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 332.0
margin_bottom = 324.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="restaBoton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 200 )
size_flags_horizontal = 3
size_flags_vertical = 4
text = "-"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_top = 55.0
margin_right = 212.0
margin_bottom = 145.0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 92.0
margin_bottom = 90.0

[node name="name" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 92.0
margin_bottom = 43.0
text = "name"
align = 1

[node name="count" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 92.0
margin_bottom = 90.0
text = "0"
align = 1

[node name="sumarBoton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 232.0
margin_right = 332.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 200 )
size_flags_horizontal = 3
size_flags_vertical = 4
text = "+"

[connection signal="pressed" from="MarginContainer/VBoxContainer/botonBorrar" to="." method="_on_botonBorrar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/restaBoton" to="." method="_on_restaBoton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/sumarBoton" to="." method="_on_sumarBoton_pressed"]
